# data_structures_and_algorithms

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
LinearDataStructures/: DoublyLinkedList.py  LinearSearch.py  LinkedList.py  Node.py  Queues.py  Stacks.py
SearchingAlgorithms/: BinarySearch.py
src/LinearDataStructures/: DoubleNode.py  DoublyLinkedList.py  LinkedList.py  Queues.py  SingleNode.py  Stacks.py
src/NonLinearDataStructures/: Trees.py
src/SearchingAlgorithms/: BinarySearch.py  LinearSearch.py
tests/tests_LinearDataStructures/: test_BinarySearch.py  test_DoublyLinkedList.py  test_LinearSearch.py  test_LinkedList.py  test_Queues.py  test_Stacks.py
tests/tests_NonLinearDataStructures/: test_trees.py
tests/tests_SearchingAlgorithms/: test_BinarySearch.py  test_LinearSearch.py
