[metadata]
name = Data Structures and Algorithms
description = Codebase demonstrating a range of data structures and algorithms along with testing techniques
author = Abdullah Rawat
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    LinearDataStructures
    NonLinearDataStructures
    SearchingAlgorithms
    SortingAlgorithms

install_requires = pytest

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
LinearDataStructures = py.typed
NonLinearDataStructures = py.typed
SearchingAlgorithm = py.typed
SortingAlgorithms = py.typed

[flake8]
max-line-length = 160
